force-app/main/default/objects/Community_Schedule_Day__c/Community_Schedule_Day__c.object-meta.xml
<CustomObject>
    <label>Community Schedule Day</label>
    <nameField>
        <displayFormat>Comm Sched Day #-{000000}</displayFormat>
        <label>Community Schedule Day #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Schedule Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>