force-app/main/default/objects/Community_Schedule_Day__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Agency_Contract1__c</referenceTo>
    <relationshipLabel>Community Schedule Days</relationshipLabel>
    <relationshipName>Community_Schedule_Days</relationshipName>
    <type>Lookup</type>
</CustomField>