force-app/main/default/objects/Community_Schedule_Day__c/fields/Contract_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Contract_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Schedule</label>
    <referenceTo>Contract_Schedule__c</referenceTo>
    <relationshipLabel>Community Schedule Days</relationshipLabel>
    <relationshipName>Community_Schedule_Days</relationshipName>
    <type>Lookup</type>
</CustomField>