force-app/main/default/objects/Community_Schedule_Day__c/fields/Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Crew_Chief_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Community Schedule Days</relationshipLabel>
    <relationshipName>Community_Schedule_Days</relationshipName>
    <type>Lookup</type>
</CustomField>