force-app/main/default/objects/Community_Schedule_Day__c/fields/Day_of_the_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week_Number__c</fullName>
    <formula>CASE( Day_of_the_Week__c , &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;, 7, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>