force-app/main/default/objects/Community_Schedule_Day__c/fields/End_Lunch_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Lunch_Time__c</fullName>
    <label>End Lunch Time</label>
    <type>Time</type>
</CustomField>