force-app/main/default/objects/Community_Schedule_Day__c/fields/End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Work_Time__c</fullName>
    <label>End Work Time</label>
    <type>Time</type>
</CustomField>