force-app/main/default/objects/Community_Schedule_Day__c/fields/Evaluate_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Work_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workflow &quot;Evaluate Work Time&quot; changes to checked at record creation to force the &quot;Work Time &gt;= 5 Hours&quot; workflow rule to run and Lunch Start/End Times to update if needed.</description>
    <label>Evaluate Work Time</label>
    <type>Checkbox</type>
</CustomField>