force-app/main/default/objects/Community_Schedule_Day__c/fields/Intern_Count__c.field-meta.xml
<CustomField>
    <fullName>Intern_Count__c</fullName>
    <label>Worker Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>