force-app/main/default/objects/Community_Schedule_Day__c/fields/Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Man_Hours__c</fullName>
    <label>Worker Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>