force-app/main/default/objects/Community_Schedule_Day__c/fields/Start_Lunch_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Lunch_Time__c</fullName>
    <label>Start Lunch Time</label>
    <type>Time</type>
</CustomField>