force-app/main/default/objects/Community_Schedule_Day__c/fields/Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Work_Time__c</fullName>
    <label>Start Work Time</label>
    <type>Time</type>
</CustomField>