force-app/main/default/objects/Community_Schedule_Day__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Community Schedule Days</relationshipLabel>
    <relationshipName>Community_Schedule_Days</relationshipName>
    <type>Lookup</type>
</CustomField>