force-app/main/default/objects/Community_Schedule_Day__c/fields/Work_Lunch_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Lunch_Time__c</fullName>
    <formula>(End_Work_Time__c - Start_Work_Time__c)/(60*60*1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work + Lunch Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>