force-app/main/default/objects/Community_Schedule_Day__c/fields/Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Time__c</fullName>
    <formula>Work_Lunch_Time__c - Lunch_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>